--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,11 @@
 <div class="login-page">
     <div class="container-fluid p-0 vh-100">
         <div class="row g-0 h-100">
+            
+            <!-- Logo en haut à gauche (desktop) / centré (mobile/tablette) -->
+            <div class="login-logo">
+                <img src="/ASSET/img/Logo_Beige.svg" alt="Logo" class="login-logo-img">
+            </div>
 
             <!-- Côté gauche : Formulaire de connexion -->
             <div class="col-lg-6 col-md-7 d-flex align-items-center justify-content-center bg-light">
